# hand

./: .gitignore  .gitmodules  README.md  pyproject.toml
hand/: resolvers.py
hand/cfg/: convert_calvin_to_tfds.yaml  convert_to_tfds.yaml  pipeline.yaml  preprocess_calvin_raw.yaml  retrieval.yaml  retrieval_calvin.yaml  split_hand_demos.yaml  split_long_horizon_queries.yaml  train_act.yaml
hand/cfg/env/: base.yaml  calvin.yaml  robot.yaml
hand/data/: optical_flow.py  preprocess.py  utils.py
hand/models/: action_chunking_transformer_decoder.py  image_embedder.py  molmo.py
hand/models/policy/: base.py
hand/models/utils/: transformer_utils.py
hand/retrieval/: data_utils.py  dtw.py  retrieval.py  retrieval_calvin.py  utils.py  visualize.py
hand/retrieval/scripts/: pipeline.py  split_data_into_subtrajs.py
hand/scripts/: convert_calvin_to_tfds.py  eval_calvin.py  preprocess_calvin_data.py  preprocess_calvin_raw.py  train_act.py
hand/utils/: general_utils.py  logger.py
